# Lidar_Detection

./: .gitignore  README.md  calib.urdf
cluster/: CMakeLists.txt  package.xml
cluster/dbscan/: CMakeLists.txt  example.cpp
cluster/include/: dbscan.hpp
cluster/src/: clustering.cpp  dbscan.cpp
clustering/: CMakeLists.txt  package.xml
clustering/include/: dbscan.hpp
clustering/include/kf_tracker/: CKalmanFilter.hpp  featureDetection.hpp  tracker.hpp
clustering/include/utils/: visualizer.hpp
clustering/launch/: urdf.launch.py
clustering/src/: dbscan.cpp  lidar_cluster.cpp  merge_node.cpp
clustering/src/kf_tracker/: CKalmanFilter.cpp  featureDetection.cpp  tracker.cpp
clustering/src/utils/: visualizer.cpp
curbside/: CMakeLists.txt  package.xml
curbside/include/: data_structures.hpp
curbside/src/: star_shaped_search.cpp
detection/: CMakeLists.txt  package.xml
detection/include/detection/: detection.hpp  fusion_function.hpp  kalman_filter.hpp  radar_type.hpp
detection/src/: detection.cpp  detection_node.cpp  fusion_function.cpp  kalman_filter.cpp  radar_fusion_node.cpp  radar_moving_filter_node.cpp
lane/: CMakeLists.txt  package.xml
lane/include/lane/: lane_statistics.hpp
lane/src/: lane_statistics.cpp
matlab_scripts/: lane_detection.m  my_helperComputeHistogram.m  my_helperfindpeaks.m
matlab_scripts/LaneMarking_Detection/: my_helperDetectLanes.m  my_helperDisplayBins.m  my_helperDrawCuboidFromROI.m  my_helperFitPolynomial.m  my_helperGetDataset.m  my_helperInitialWindow.m
matlab_scripts/calibration/: delete_n_lines.py  kitti_traj_front.txt  kitti_traj_left.txt  kitti_traj_right.txt  lidar_hand_eye_non_plannar_calib.m  lidar_hand_eye_plannar_calib.m  odom_obtain_from_txt.m  plot_sensor_odom.m  read_text.m
on_board_detection/: CMakeLists.txt
on_board_detection/include/patchworkpp/: patchworkpp.hpp
on_board_detection/launch/: demo.launch.py
on_board_detection/src/: merge_node.cpp
patchwork/: CMakeLists.txt  package.xml  pyproject.toml
patchwork/include/patchworkpp/: patchworkpp.hpp
patchwork/launch/: demo.launch.py
perception/: CMakeLists.txt  package.xml
perception/include/perception/: patchworkpp.hpp
perception/src/: demo.cpp  patchworkpp.cpp
perception/src/utils/: lane_statistics.py  merge_pcd.py  traj_gicp_calib.py  trajectory_separate.py
python_scripts/: Pointcloud_LaneMarking_Detection.ipynb  hand_eye_calibration.py  lane_statistics.py  lidar_dbscan_test.py  map_transform.py  mapper.py  mcap_lidar_reader.py  traj_ransac_kd.py
vectornav_reader/: CMakeLists.txt  left_track.csv  package.xml  right_track.csv
vectornav_reader/include/vectornav_reader/: reader.hpp
vectornav_reader/src/: reader.cpp
