<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>detection</name>
  <version>0.0.0</version>
  <description>ROS2 Lidar Detection package for A2RL</description>
  <maintainer email="jintian.ge@qq.cim">oscar</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>a2rl_bs_msgs</depend>
  <depend>OpenCV</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp_components</depend>
  <depend>message_filters</depend>
  <depend>pcl_ros</depend>
  <!-- <depend>ceres-solver</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
